<resources>
    <string name="app_name">operation</string>
    <string name="bottom_bar_left">"问题汇"</string>
    <string name="bottom_bar_middle">"使用汇"</string>
    <string name="bottom_bar_right">"我的"</string>
    <string name="zz">"掌机"</string>
    <string name="tsc">"外设"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_left_fragment">Hello left fragment</string>
    <string name="hello_middle_fragment">Hello middle fragment</string>
    <string name="hello_right_fragment">Hello right fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="zz_que_fragment">this is zz que fragment</string>
    <string name="tsc_que_fragment">this is tsc que fragment</string>
    <string name="zz_use_fragment">this is zz use fragment</string>
    <string name="tsc_use_fragment">this is tsc use fragment</string>
    <string name="mine">"我的"</string>
    <string name="community">"社区"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>community
    <string name="map">"地图导航"</string>
    <string name="satellite_map">"卫星图"</string>
    <string name="twoD_map">"2D平面图"</string>
    <string name="threeD_map">"3D俯视图"</string>
    <string name="location">"定位"</string>
</resources>
