<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.guide.zzdts.operation.activity.MapActivity">-->
    <!--<com.baidu.mapapi.map.MapView-->
        <!--android:id="@+id/mapView"-->
        <!--android:layout_width="412dp"-->
        <!--android:layout_height="657dp"-->
        <!--android:layout_marginRight="0dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="0dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="0dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--android:layout_marginBottom="0dp"-->
        <!--app:layout_constraintVertical_bias="0.0">-->
        <!---->
    <!--</com.baidu.mapapi.map.MapView>-->

    <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:drawableTop="@mipmap/map_type"-->
        <!--tools:layout_editor_absoluteY="567dp"-->
        <!--tools:layout_editor_absoluteX="16dp" />-->
<!--</android.support.constraint.ConstraintLayout>-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_main">
        <com.baidu.mapapi.map.MapView
        android:id="@+id/mapView"
        android:layout_width="412dp"
        android:layout_height="657dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.0">
        </com.baidu.mapapi.map.MapView>

        <TextView
            android:id="@+id/textView_mapType"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:drawableTop="@mipmap/map_type"
            android:background="@color/colorWhite"
            android:layout_marginBottom="49dp"
            android:layout_marginStart="12dp"
            android:layout_alignBottom="@+id/mapView"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView_traffic_no_selected"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:drawableTop="@mipmap/traff_no_selected"
            android:background="@color/colorWhite"
            android:layout_marginBottom="9dp"
            android:layout_above="@+id/textView_mapType"
            android:layout_alignStart="@+id/textView_mapType" />

        <TextView
            android:id="@+id/textView_traffic_selected"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:visibility="gone"
            android:background="@color/colorWhite"
            android:drawableTop="@mipmap/traffic_selected"
            android:text="TextView"
            android:layout_above="@+id/textView_mapType"
            android:layout_alignStart="@+id/textView_mapType"
            android:layout_marginBottom="9dp"
            android:layout_alignEnd="@+id/textView_mapType" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/colorWhite"
            android:drawableTop="@mipmap/location"
            android:text="@string/location"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_marginBottom="55dp"
            android:layout_above="@+id/textView_mapType"
            android:layout_alignStart="@+id/textView_mapType"
            android:layout_alignEnd="@+id/textView_mapType" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/drawer_child"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_gravity = "start"
        >

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linearLayout_satellite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_satellite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@mipmap/satellite" />

                <TextView
                    android:id="@+id/textView_satellite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/satellite_map" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout_2D_plan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_two_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/two_d_plan" />

                <TextView
                    android:id="@+id/textView_two_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/twoD_map" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_3D_plan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_three_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/three_d_plan" />

                <TextView
                    android:id="@+id/textView_three_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/threeD_map" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>